# finance_rust

./: Cargo.toml
cqrs/: Cargo.toml
cqrs/src/: identifier.rs  lib.rs  stream.rs
cqrs/src/behaviour/: mod.rs
cqrs/src/error/: mod.rs
cqrs/src/events/: mod.rs  projections.rs  store.rs
cqrs/src/events/store/: in_memory_store.rs
cqrs/src/projections/: mod.rs
cqrs/src/write/: chart.rs  journal.rs  ledger.rs  mod.rs
finance_lib/: Cargo.toml
finance_lib/src/: lib.rs
finance_lib/src/account/: category.rs  mod.rs
finance_lib/src/balance/: mod.rs
finance_lib/src/entry/: mod.rs
finance_lib/src/ledger/: mod.rs  tests.rs
message_bus/: Cargo.toml
message_bus/src/: lib.rs
message_bus/src/command_handler/: mod.rs
message_bus/src/message/: mod.rs
src/: bookkeeping.rs  bookkeeping_tests.rs  lib.rs  main.rs
src/account/: category.rs  mod.rs
src/balance/: mod.rs  tests.rs
src/entry/: mod.rs
src/error/: mod.rs
src/ledger/: mod.rs  tests.rs
tests/: chart_projection.rs  event_producer.rs  journal_entry.rs  message_bus.rs  message_bus_tests.rs  validate_journal_tests.rs
