[package]
name = "finance"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs = { version = "0.1.0", path = "cqrs" }
personal_finance = { version = "0.1.0", path = "finance_lib" }

[workspace]

[dev-dependencies]
chrono = "0.4.19"
