[package]
name = "cqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
error-stack = "0.2.1"
personal_finance = { version = "0.1.0", path = "../finance_lib" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "2.1.0"
