[package]
name = "personal_finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
enum-iterator = "0.7.0"
thiserror = "1.0.31"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "1.2.0"

