[package]
name = "message_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs = { version = "0.1.0", path = "../cqrs" }
error-stack = "0.1.1"
futures = "0.3.24"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "sync"] }
